--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <!-- Site Metas -->
-  <meta name="keywords" content=""/>
-  <meta name="description" content=""/>
-  <meta name="author" content=""/>
+  <meta name="keywords" content="DevLabs, Devlabs Co, DevLabs Corporation, DevLabs Corporation LLC, Alejandro Salinas uapo_salinas"/>
+  <meta name="description" content="DevLabs Corporation, una empresa de Alejandro Salinas."/>
+  <meta name="author" content="Alejandro Salinas"/>
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 
-  <title>BigWing</title>
+  <title>Devlabs Corporation LLC</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"/>
