--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
           <div class="col-lg-8">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
               <a class="navbar-brand" href="index.html">
-                <span>
-                  BigWing
-                </span>
+                <span></span>
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,19 +45,19 @@
                 <div class="d-flex  flex-column flex-lg-row align-items-center">
                   <ul class="navbar-nav  ">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="about.html">About </a>
+                      <a class="nav-link" href="about.html">Acerca de </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="service.html">Services </a>
+                      <a class="nav-link" href="service.html">Servicios </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact</a>
+                      <a class="nav-link" href="contact.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"> Login</a>
+                      <a class="nav-link" href="#"> Hello ID</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
@@ -88,24 +86,24 @@
                 <div class="col-lg-5 col-md-6">
                   <div class="slider_detail-box">
                     <h1>
-                      Start <br/>
-                      Business with <br/>
-                      Our Company
+                     <br/>
+                     Te presentamos 
+                     <br/>
+                      Hello ID
                     </h1>
                     <p>
-                      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                      nostrud exercitation ullamco laboris nisi
+                      Es un servicio de nube y administración de cuentas perfecto para tu empresa, escuela, o por qué no, para que guardes tus TikToks
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Read More
+                      <a href="https://helloid.devlabsco.space" target="_blank" class="btn-1">
+                        Ver más
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="images/slider-img.png" alt=""/>
+                    <img src="images/com.one.png" alt=""/>
                   </div>
                 </div>
               </div>
@@ -117,9 +115,9 @@
                 <div class="col-lg-5 col-md-6">
                   <div class="slider_detail-box">
                     <h1>
-                      Start <br/>
-                      Business with <br/>
-                      Our Company
+                     <br/>
+                    Tambien tenemos <br/>
+                      DevLabs Networks
                     </h1>
                     <p>
                       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
@@ -134,7 +132,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="images/slider-img.png" alt=""/>
+                    <img src="images/DS_Logo_SF.png" alt=""/>
                   </div>
                 </div>
               </div>
