--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                       <a class="nav-link" href="contact.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"> Hello ID</a>
+                      <a class="nav-link" href="https://helloid.devlabsco.space/" target="_blank"> Hello ID</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
@@ -120,12 +120,11 @@
                       DevLabs Networks
                     </h1>
                     <p>
-                      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                      nostrud exercitation ullamco laboris nisi
+                      Te ofrecemos un servicio de servidores al nivel <br> mundial, te incluye control de bases de datos, cdn, <br> entre muchas otras herramientas de desarrollo.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Read More
+                      <a href="https://networks.devlabsco.space" target="_blank" class="btn-1">
+                        Ver más
                       </a>
                     </div>
                   </div>
@@ -144,24 +143,22 @@
                 <div class="col-lg-5 col-md-6">
                   <div class="slider_detail-box">
                     <h1>
-                      Start <br/>
-                      Business with <br/>
-                      Our Company
+                       <br/>
+                      DevLabs Partners <br/>
                     </h1>
                     <p>
-                      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                      nostrud exercitation ullamco laboris nisi
+                     Seamos uno solo, te ayudamos establecer, manejar, promocionar e innovar tu negocio con soluciones de software que se adaptan a las necesidades de tus clientes y de tu empresa. 
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn-1">
-                        Read More
+                      <a href="https://partners.devlabsco.space/" target="_blank" class="btn-1">
+                        Ver más
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="images/slider-img.png" alt=""/>
+                    <img src="images/partners.png" alt=""/>
                   </div>
                 </div>
               </div>
