--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"/>
+<!DOCTYPE html><html lang="es"><head><meta charset="utf-8"/>
 
   
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -183,7 +183,7 @@
     <div class="container">
       <div class="custom_heading-container">
         <h2>
-          Welcome To Our Company
+          ¡Hola, futuro compañero de aventuras! 
         </h2>
       </div>
       <div class="layout_padding2">
@@ -192,14 +192,12 @@
         </div>
         <div class="detail-box">
           <p>
-            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-          </p>
+            Aquí trabajamos duro y nos divertimos más, ayudando a personas y empresas a alcanzar sus metas. Unimos fuerzas para crear un impacto positivo y conectar tus ideas con el éxito.
+
+           <br>
+           <br> ¡Únete a nuestra gran familia y disfruta del proceso mientras crecemos juntos! 🌟          </p>
           <div>
-            <a href="">
+            <a href="" style="opacity: 0; visibility: hidden;">
               Read More
             </a>
           </div>
