--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div class="container">
       <div class="custom_heading-container">
         <h2>
-          Our Services
+          Nuestros Servicios
         </h2>
       </div>
       <div class="service_container layout_padding2">
